--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
 <section id="banner">
     <div class="event-panel container" style = "text-align: center !important;">
 		<p style="font-size:50px" class = "">Teens Exploring Code</p>
-		<h3 style = "text-align: center; !important; padding-bottom:20px">February 17 - 18, 2018</h3>
+        <h3 style = "text-align: center !important;">
+            Mitchell Park Community Center<br>
+            3700 Middlefield Rd, Palo Alto, CA 94303
+        </h3>
+		<h3 style = "text-align: center !important; padding-bottom:20px; font-weight: bold; text-transform: uppercase;">February 17 - 18, 2018</h3>
 		<a class="ghost-button-transition" href="https://tec13.typeform.com/to/yZjI4o" target = "_blank">REGISTER</a>
 		<a class="ghost-button-transition" href="https://www.facebook.com/teensexploringcode/" target = "_blank">GET UPDATES</a>
     </div>
