add akshay image

--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
         </div>
         <div class="row">
             <div class = "col-lg-2 col-lg-offset-3">
-                <img style = "border-radius: 50%;height:200px" src="static/img/same.jpg">
-                <p style = "padding-top: 30px; padding-bottom: 30px">Akshay Bodla<br>Sponsorship</p>
+                <img style = "border-radius: 50%;height:200px" src="static/img/akshay.png">
+                <p style = "padding-top: 30px; padding-bottom: 30px">Ashkay Bodla<br>Sponsorship</p>
             </div>
             <div class = "col-lg-2">
                 <img style = "border-radius: 50%;height:200px" src="static/img/isha.png">
