updating event format

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <body style = "">
 
-<a id="mlh-trust-badge" style="display:block;max-width:100px;min-width:60px;position:fixed;left:50px;top:0;width:10%;z-index:10000" href="https://mlh.io/seasons/na-2018/events?utm_source=na-2018&utm_medium=TrustBadge&utm_campaign=na-2018&utm_content=gray" target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2018/gray.svg" alt="Major League Hacking 2017 Hackathon Season" style="width:100%"></a>
+<!-- <a id="mlh-trust-badge" style="display:block;max-width:100px;min-width:60px;position:fixed;left:50px;top:0;width:10%;z-index:10000" href="https://mlh.io/seasons/na-2018/events?utm_source=na-2018&utm_medium=TrustBadge&utm_campaign=na-2018&utm_content=gray" target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2018/gray.svg" alt="Major League Hacking 2017 Hackathon Season" style="width:100%"></a> -->
 
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
@@ -60,7 +60,7 @@
             Mitchell Park Community Center<br>
             3700 Middlefield Rd, Palo Alto, CA 94303
         </h3>
-		<h3 style = "text-align: center !important; padding-bottom:20px; font-weight: bold; text-transform: uppercase;">February 17 - 18, 2018</h3>
+		<h3 style = "text-align: center !important; padding-bottom:20px; font-weight: bold; text-transform: uppercase;">February 17, 2018</h3>
 		<a class="ghost-button-transition" href="https://tec13.typeform.com/to/yZjI4o" target = "_blank">REGISTER</a>
 		<a class="ghost-button-transition" href="https://www.facebook.com/teensexploringcode/" target = "_blank">GET UPDATES</a>
     </div>
@@ -89,23 +89,32 @@
     <div class="container">
         <div class="row">
             <h1>Schedule</h1>
-            <div class="col-md-6 col-xs-12 text-center">
-                <h3>Day 1: February 17</h3>
-                <p>11:00AM - Attendee Check In Starts</p>
-                <p>11:30AM - Opening Ceremony</p>
+            <div class="col-md-12 col-xs-12 text-center">
+                <!-- <h3>Day 1: February 17</h3> -->
+                <p>7:30AM - Attendee Check In Starts</p>
+                <p>8:00AM - Opening Ceremony</p>
+                <p>9:00PM - TEC: Git Workflow and Team Collaboration</p>
+                <p>10:00PM - TEC: Java (Programming Basics)</p>
                 <p>12:00PM - Lunch/Team Formation</p>
-                <p>1:00PM - TEC: Git Workflow and Team Collaboration</p>
-                <p>3:00PM - TEC: Java (Programming Basics)</p>
-                <p>6:00PM - Dinner</p>
-                <p>8:00PM - Cup Stacking</p>
+                <p>1:00 PM  Hack Club: Build Your First Website</p>
+                <p>2:00 PM  QA and UX/UI workshop with Facebook employee</p>
+                <p>3:00 PM  Create Your First Discord Bot</p>
+                <p>4:00 PM  Leangap VR Workshop</p>
+                <p>5:00 PM  Dinner</p>
+                <p>6:00 PM  Make School: iOS Intro</p>
+                <p>7:00 PM  Make School: iOS Intermediate</p>
+                <p>8:00 PM  Make School: Breaking into Tech Industry</p>
+                <p>9:00 PM  AI Club Workshop (TBD)</p>
+                <p>10:00 PM Present Projects</p>
+                <p>11:30 PM Closing Ceremony</p>
             </div>
-            <div class="col-md-6 col-xs-12 text-center">
+<!--             <div class="col-md-6 col-xs-12 text-center">
                 <h3>Day 2: February 18</h3>
                 <p>12:00AM - Midnight Surprise</p>
                 <p>8:00AM - Breakfast
                 <p>11:00AM - Judging Begins</p>
                 <p>11:30AM - Closing Ceremony and Awards</p>
-            </div>
+            </div> -->
         </div>
     </div>
 </section>
