--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <p>9:00PM - TEC: Git Workflow and Team Collaboration</p>
                 <p>10:00PM - TEC: Java (Programming Basics)</p>
                 <p>12:00PM - Lunch/Team Formation</p>
-                <p>1:00 PM  Hack Club: Build Your First Website</p>
+                <!-- <p>1:00 PM  Hack Club: Build Your First Website</p> -->
                 <p>2:00 PM  QA and UX/UI workshop with Facebook employee</p>
                 <p>3:00 PM  Create Your First Discord Bot</p>
                 <p>4:00 PM  Leangap VR Workshop</p>
