--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
                 <p>3:00 PM  Create Your First Discord Bot</p>
                 <p>4:00 PM  Leangap VR Workshop</p>
                 <p>5:00 PM  Dinner</p>
-                <p>6:00 PM  Make School: iOS Intro</p>
+<!--                 <p>6:00 PM  Make School: iOS Intro</p>
                 <p>7:00 PM  Make School: iOS Intermediate</p>
-                <p>8:00 PM  Make School: Breaking into Tech Industry</p>
+                <p>8:00 PM  Make School: Breaking into Tech Industry</p> -->
                 <p>9:00 PM  AI Club Workshop (TBD)</p>
                 <p>10:00 PM Present Projects</p>
                 <p>11:30 PM Closing Ceremony</p>
