logo and sponsor fixes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </ul>
         </div>
     </div>
-</nav> 
+</nav>
 
 <section id="banner">
     <div class="event-panel container" style = "text-align: center !important;">
@@ -65,7 +65,6 @@
 		<a class="ghost-button-transition" href="https://www.facebook.com/teensexploringcode/" target = "_blank">GET UPDATES</a>
     </div>
 </section>
-
 
 <section class="bg-primary" style = "background-color:#332448" id="about">
     <div class="container">
@@ -121,7 +120,7 @@
 
 
 <style>
-.parallax { 
+.parallax {
     background: linear-gradient(rgba(60, 23, 54,.9), rgba(60, 23, 54,.9)),
     url('static/img/parallax1.jpg');
     background-attachment: fixed;
@@ -202,7 +201,7 @@
     color: white;
 }
 </style>
-		
+
 <footer class = "bg-primary" id="sponsors" style="padding-top:50px;padding-bottom: 50px;background-color:#332448">
 	<div class = "container">
 			<div class = "row">
@@ -212,8 +211,8 @@
             </div>
             <div class = "row">
                 <div class = "col-lg-12" style="padding-top:0px;">
-                    <img src = "static/sponsor/palogo.png">
-                    <img src = "static/sponsor/thinkfund.png">
+                    <img class="sponsor-logo" src = "static/sponsor/palogo.png">
+                    <img class="sponsor-logo" src = "static/sponsor/thinkfund.png">
                 </div>
             </div>
 		</div>
@@ -227,7 +226,7 @@
                 <a class="ghost-button-short" href="http://teensexploringcode.github.io/teens-exploring-code-2016/" style="">VISIT 2016</a>
 			</div>
 
-			<div class = "col-lg-6"> 
+			<div class = "col-lg-6">
     			<div style = "text-align: right">
         			<a href="https://www.facebook.com/teensexploringcode/"><i class="fa fa-facebook-square" style="padding-right: 10px; padding-bottom:10px; float: center"></i></a>
         			<a href="mailto:teensexploringcode@gmail.com"><i class="fa fa-2x fa-envelope" style = "color:white !important; float: center; text-align: center;     display:inline-block;" aria-hidden="true"></i></a>
