register/update button fixes

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 </nav>
 
 <section id="banner">
-    <div class="event-panel container" style = "text-align: center !important;">
-		<p style="font-size:50px" class = "">Teens Exploring Code</p>
+    <div class="event-panel" style = "text-align: center !important;">
+		<p class = "title-text">Teens Exploring Code</p>
         <h3 style = "text-align: center !important;">
             Mitchell Park Community Center<br>
             3700 Middlefield Rd, Palo Alto, CA 94303
@@ -69,10 +69,10 @@
 <section class="bg-primary" style = "background-color:#332448" id="about">
     <div class="container">
         <div class = "row">
-            <div class = "col-lg-4">
-                <img src="static/img/logowhite.png" id="logo" style="float:center;padding-bottom: 50px">
+            <div class = "col-lg-4" id="logo-web">
+                <img src="static/img/logowhite.png" class="logo" style="float:center;padding-bottom: 50px">
             </div>
-
+            <img src="static/img/logowhite.png" class="logo" id="logo-mobile" style="float:center;padding-bottom: 50px">
             <div class = "col-lg-8">
                 <div class = "about-info">
                     <p>If you have quirky ideas you want to bring to life, or if you want to collaborate on something meaningful with other inquisitive teens like you, join us for Teens Exploring Code (TEC) 2018!</p>
