--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class = "col-lg-8">
                 <div class = "about-info">
                     <p>If you have quirky ideas you want to bring to life, or if you want to collaborate on something meaningful with other inquisitive teens like you, join us for Teens Exploring Code (TEC) 2018!</p>
-                    <p>In 15 hours of continuous excitement, we'll show you how programming can be fun, thought-provoking and powerful. With two unique tracks and various workshops throughout the day, TEC provides a welcoming environment perfect for first-time coders and first-time hackathon attendees, along with those with more experience.</p>
+                    <p>In 15 hours of continuous excitement, we'll show you how programming can be fun, thought-provoking and powerful. With various workshops, speakers, and fun activities throughout the day, TEC provides a welcoming environment perfect for first-time coders and first-time hackathon attendees, along with those with more experience.</p>
                 </div>
             </div>
         </div>
@@ -96,7 +96,7 @@
                 <p>10:00PM - TEC: Java (Programming Basics)</p>
                 <p>12:00PM - Lunch/Team Formation</p>
                 <!-- <p>1:00 PM  Hack Club: Build Your First Website</p> -->
-                <p>2:00 PM  QA and UX/UI workshop with Facebook employee</p>
+                <p>2:00 PM  Q/A session with a UI/UX designer at Facebook</p>
                 <p>3:00 PM  Create Your First Discord Bot</p>
                 <p>4:00 PM  Leangap VR Workshop</p>
                 <p>5:00 PM  Dinner</p>
