jaskld add mlh back???

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <body style = "">
 
-<!-- <a id="mlh-trust-badge" style="display:block;max-width:100px;min-width:60px;position:fixed;left:50px;top:0;width:10%;z-index:10000" href="https://mlh.io/seasons/na-2018/events?utm_source=na-2018&utm_medium=TrustBadge&utm_campaign=na-2018&utm_content=gray" target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2018/gray.svg" alt="Major League Hacking 2017 Hackathon Season" style="width:100%"></a> -->
+<a id="mlh-trust-badge" style="display:block;max-width:100px;min-width:60px;position:fixed;left:50px;top:0;width:10%;z-index:10000" href="https://mlh.io/seasons/na-2018/events?utm_source=na-2018&utm_medium=TrustBadge&utm_campaign=na-2018&utm_content=gray" target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2018/gray.svg" alt="Major League Hacking 2017 Hackathon Season" style="width:100%"></a>
 
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
@@ -211,9 +211,20 @@
                 </div>
             </div>
             <div class = "row">
-                <div class = "col-lg-12" style="padding-top:0px;">
+                <style>
+                .col-lg-12-offset-3 > img {
+                    width: 400px;
+                    margin: 20px;
+                }
+               .huge-logo {
+                    width: 75px;
+                } 
+                </style>
+                <div class = "col-lg-12-offset-3" style="padding-top:0px;">
                     <img src = "static/sponsor/palogo.png">
                     <img src = "static/sponsor/thinkfund.png">
+                    <img src = "static/sponsor/leangap-full.png">
+                    <img src = "static/sponsor/localhost-inverted.png">
                 </div>
             </div>
 		</div>
