--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <p>10:00PM - TEC: Java (Programming Basics)</p>
                 <p>12:00PM - Lunch/Team Formation</p>
                 <!-- <p>1:00 PM  Hack Club: Build Your First Website</p> -->
-                <p>2:00 PM  Q/A session with a UI/UX designer at Facebook</p>
+                <p>2:00 PM  How to Suceed In the Workplace: UI/UX designer @ Facebook, Katherine Liu</p>
                 <p>3:00 PM  Create Your First Discord Bot</p>
                 <p>4:00 PM  Leangap VR Workshop</p>
                 <p>5:00 PM  Dinner</p>
