--- a/index.html
+++ b/index.html
@@ -88,7 +88,10 @@
     <div class="container">
         <div class="row">
             <h1>Schedule</h1>
-            <div class="col-md-12 col-xs-12 text-center">
+            <div class="col-md-12 col-xs-12 text-center" style = "    text-align: left;
+    padding-left: 25%;
+    margin-top: 20px;
+    padding-right: 25%;">
                 <!-- <h3>Day 1: February 17</h3> -->
                 <p>7:30AM - Attendee Check In Starts</p>
                 <p>8:00AM - Opening Ceremony</p>
@@ -97,8 +100,8 @@
                 <p>12:00PM - Lunch/Team Formation</p>
                 <!-- <p>1:00 PM  Hack Club: Build Your First Website</p> -->
                 <p>2:00 PM  How to Suceed In the Workplace: UI/UX designer @ Facebook, Katherine Liu</p>
-                <p>3:00 PM  Create Your First Discord Bot</p>
-                <p>4:00 PM  Leangap VR Workshop</p>
+                <!-- <p>3:00 PM  Create Your First Discord Bot</p> -->
+                <p>4:00 PM  Leangap Entrepreneurship Workshop</p>
                 <p>5:00 PM  Dinner</p>
 <!--                 <p>6:00 PM  Make School: iOS Intro</p>
                 <p>7:00 PM  Make School: iOS Intermediate</p>
