--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <!-- <h3>Day 1: February 17</h3> -->
                 <p>7:30AM - Attendee Check In Starts</p>
                 <p>8:00AM - Opening Ceremony</p>
-                <p>9:00PM - TEC: Git Workflow and Team Collaboration</p>
+                <p>9:00AM - TEC: Git Workflow and Team Collaboration</p>
                 <p>10:00PM - TEC: Java (Programming Basics)</p>
                 <p>12:00PM - Lunch/Team Formation</p>
                 <!-- <p>1:00 PM  Hack Club: Build Your First Website</p> -->
@@ -106,7 +106,7 @@
 <!--                 <p>6:00 PM  Make School: iOS Intro</p>
                 <p>7:00 PM  Make School: iOS Intermediate</p>
                 <p>8:00 PM  Make School: Breaking into Tech Industry</p> -->
-                <p>9:00 PM  AI Club Workshop (TBD)</p>
+                <!-- <p>9:00 PM  AI Club Workshop (TBD)</p> -->
                 <p>10:00 PM Present Projects</p>
                 <p>11:30 PM Closing Ceremony</p>
             </div>
