team formation thing

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                 <!-- <h3>Day 1: February 17</h3> -->
                 <p>7:30AM - Attendee Check In Starts</p>
                 <p>8:00AM - Opening Ceremony</p>
+                <p>8:15AM - Team Formation</p>
                 <p>9:00AM - TEC: Git Workflow and Team Collaboration</p>
                 <p>10:00PM - TEC: Java (Programming Basics)</p>
                 <p>12:00PM - Lunch/Team Formation</p>
