--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <p>8:15AM - Team Formation</p>
                 <p>9:00AM - TEC: Git Workflow and Team Collaboration</p>
                 <p>10:00AM - TEC: Java (Programming Basics)</p>
-                <p>12:00PM - Lunch/Team Formation</p>
+                <p>12:00PM - Lunch</p>
                 <!-- <p>1:00 PM  Hack Club: Build Your First Website</p> -->
                 <p>2:00 PM  How to Suceed In the Workplace: UI/UX designer @ Facebook, Katherine Liu</p>
                 <!-- <p>3:00 PM  Create Your First Discord Bot</p> -->
