--- a/index.html
+++ b/index.html
@@ -108,8 +108,9 @@
                 <p>7:00 PM  Make School: iOS Intermediate</p>
                 <p>8:00 PM  Make School: Breaking into Tech Industry</p> -->
                 <!-- <p>9:00 PM  AI Club Workshop (TBD)</p> -->
-                <p>10:00 PM Present Projects</p>
-                <p>11:30 PM Closing Ceremony</p>
+                <p>9:00 PM - Code Freeze</p>
+                <p>9:30 PM - Present Projects</p>
+                <p>11:30 PM - Closing Ceremony</p>
             </div>
 <!--             <div class="col-md-6 col-xs-12 text-center">
                 <h3>Day 2: February 18</h3>
