--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
                 <p>7:30AM - Attendee Check In Starts</p>
                 <p>8:00AM - Opening Ceremony</p>
                 <p>8:15AM - Team Formation</p>
-                <p>9:00AM - TEC: Git Workflow and Team Collaboration</p>
-                <p>10:00AM - TEC: Java (Programming Basics)</p>
+                <p>9:00AM - TEC: Python (Programming Basics)</p>
+                <p>11:00AM - TEC: Java (Programming Basics)</p>
                 <p>12:00PM - Lunch</p>
-                <!-- <p>1:00 PM  Hack Club: Build Your First Website</p> -->
-                <p>2:00 PM  How to Suceed In the Workplace: UI/UX designer @ Facebook, Katherine Liu</p>
-                <!-- <p>3:00 PM  Create Your First Discord Bot</p> -->
-                <p>4:00 PM  Leangap Entrepreneurship Workshop</p>
-                <p>5:00 PM  Dinner</p>
+                <p>1:00PM - TEC: Git Workflow and Team Collaboration</p>
+                <p>2:00 PM - How to Suceed In the Workplace: UI/UX designer @ Facebook, Katherine Liu</p>
+                <p>3:00 PM - TEC: Build Your First Website</p>
+                <p>4:00 PM - Leangap Entrepreneurship Workshop</p>
+                <p>5:00 PM - Dinner</p>
 <!--                 <p>6:00 PM  Make School: iOS Intro</p>
                 <p>7:00 PM  Make School: iOS Intermediate</p>
                 <p>8:00 PM  Make School: Breaking into Tech Industry</p> -->
