--- a/index.html
+++ b/index.html
@@ -88,11 +88,10 @@
     <div class="container">
         <div class="row">
             <h1>Schedule</h1>
-            <div class="col-md-12 col-xs-12 text-center" style = "    text-align: left;
-    padding-left: 25%;
-    margin-top: 20px;
-    padding-right: 25%;">
-                <!-- <h3>Day 1: February 17</h3> -->
+            <div class="col-md-12 col-xs-12 text-center" style = "text-align: left;
+                                                                  padding-left: 25%;
+                                                                  margin-top: 20px;
+                                                                  padding-right: 25%;">
                 <p>7:30AM - Attendee Check In Starts</p>
                 <p>8:00AM - Opening Ceremony</p>
                 <p>8:15AM - Team Formation</p>
@@ -103,14 +102,10 @@
                 <p>2:00 PM - How to Suceed In the Workplace: UI/UX designer @ Facebook, Katherine Liu</p>
                 <p>3:00 PM - TEC: Build Your First Website</p>
                 <p>4:00 PM - Leangap Entrepreneurship Workshop</p>
-                <p>5:00 PM - Dinner</p>
-<!--                 <p>6:00 PM  Make School: iOS Intro</p>
-                <p>7:00 PM  Make School: iOS Intermediate</p>
-                <p>8:00 PM  Make School: Breaking into Tech Industry</p> -->
-                <!-- <p>9:00 PM  AI Club Workshop (TBD)</p> -->
+                <p>6:30 PM - Dinner/Activities</p>
                 <p>9:00 PM - Code Freeze</p>
                 <p>9:30 PM - Present Projects</p>
-                <p>11:15 PM - Closing Ceremony</p>
+                <p>11:15 PM - Closing Ceremony/Raffle</p>
             </div>
 <!--             <div class="col-md-6 col-xs-12 text-center">
                 <h3>Day 2: February 18</h3>
