haha screw activities

--- a/index.html
+++ b/index.html
@@ -102,18 +102,11 @@
                 <p>2:00 PM - How to Suceed In the Workplace: UI/UX designer @ Facebook, Katherine Liu</p>
                 <p>3:00 PM - TEC: Build Your First Website</p>
                 <p>4:00 PM - Leangap Entrepreneurship Workshop</p>
-                <p>6:30 PM - Dinner/Activities</p>
+                <p>6:30 PM - Dinner</p>
                 <p>9:00 PM - Code Freeze</p>
                 <p>9:30 PM - Present Projects</p>
                 <p>11:15 PM - Closing Ceremony/Raffle</p>
             </div>
-<!--             <div class="col-md-6 col-xs-12 text-center">
-                <h3>Day 2: February 18</h3>
-                <p>12:00AM - Midnight Surprise</p>
-                <p>8:00AM - Breakfast
-                <p>11:00AM - Judging Begins</p>
-                <p>11:30AM - Closing Ceremony and Awards</p>
-            </div> -->
         </div>
     </div>
 </section>
