--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
             3700 Middlefield Rd, Palo Alto, CA 94303
         </h3>
 		<h3 style = "text-align: center !important; padding-bottom:20px; font-weight: bold; text-transform: uppercase;">February 17, 2018</h3>
-		<a class="ghost-button-transition" href="https://tec13.typeform.com/to/yZjI4o" target = "_blank">REGISTER</a>
-		<a class="ghost-button-transition" href="https://www.facebook.com/teensexploringcode/" target = "_blank">GET UPDATES</a>
+<!-- 		<a class="ghost-button-transition" href="https://tec13.typeform.com/to/yZjI4o" target = "_blank">REGISTER</a>
+		<a class="ghost-button-transition" href="https://www.facebook.com/teensexploringcode/" target = "_blank">GET UPDATES</a> -->
+            <h3>Registration has closed! Email us at teensexploringcode@gmail.com for late registration.</h3>
     </div>
 </section>
 
