--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
             <div class = "col-lg-2 col-lg-offset-3">
                 <img style = "border-radius: 50%;height:200px" src="static/img/me.jpg">
-                <p style = "padding-top: 30px; padding-bottom: 30px">Emily Yu<br>Head Organizer</p>
+                <p style = "padding-top: 30px; padding-bottom: 30px">Emily Yu<br>Director</p>
             </div>
             <div class = "col-lg-2">
                 <img style = "border-radius: 50%;height:200px" src="static/img/kelsey.jpg">
