--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                 <p>2:00 PM - How to Suceed In the Workplace: UI/UX designer @ Facebook, Katherine Liu</p>
                 <p>3:00 PM - TEC: Build Your First Website</p>
                 <p>4:00 PM - Leangap Entrepreneurship Workshop</p>
+                <p>5:00PM - Leangap VR Workshop</p>
                 <p>6:30 PM - Dinner</p>
                 <p>9:00 PM - Code Freeze</p>
                 <p>9:30 PM - Present Projects</p>
