changed registration text

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		<h3 style = "text-align: center !important; padding-bottom:20px; font-weight: bold; text-transform: uppercase;">February 17, 2018</h3>
 <!-- 		<a class="ghost-button-transition" href="https://tec13.typeform.com/to/yZjI4o" target = "_blank">REGISTER</a>
 		<a class="ghost-button-transition" href="https://www.facebook.com/teensexploringcode/" target = "_blank">GET UPDATES</a> -->
-            <h3>Registration has closed! Email us at teensexploringcode@gmail.com for late registration.</h3>
+            <h2>Thanks for coming! Hope to see you next year!</h2>
     </div>
 </section>
 
@@ -212,7 +212,7 @@
                 }
                .huge-logo {
                     width: 75px;
-                } 
+                }
                 </style>
                 <div class = "col-lg-12-offset-3" style="padding-top:0px;">
                     <img class="sponsor-logo" src = "static/sponsor/palogo.png">
