--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <p style = "padding-top: 30px; padding-bottom: 30px">Isha Rajput<br>Logistics</p>
             </div>
             <div class = "col-lg-2">
-                <img style = "border-radius: 50%;height:200px" src="static/img/same.jpg">
+                <img style = "border-radius: 50%;height:200px" src="static/img/ashley.jpg">
                 <p style = "padding-top: 30px; padding-bottom: 30px">Ashley Gauba<br>Marketing</p>
             </div>
         </div>
