--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
         <div class="full-width hero-text">
           <p class="white presents-font center heading" id="" data-text="tecHacks">Teens Exploring Code presents</p>
           <p class="white event-font center heading">tec<b>HACKS IV</b></p>
+
+          <p class="white info-font center heading">Date TBD @ Location TBD</p>
+          <!--
           <p class="white info-font center heading">Feb.17 @ <a class="white underline-magical location-map" href="https://www.google.com/maps/place/Mitchell+Park+Community+Center/@37.4222836,-122.1149618,17z/data=!3m1!4b1!4m5!3m4!1s0x808fba6961695425:0xa8028fe7f16d5437!8m2!3d37.4222836!4d-122.1127678" target="_blank"</a>Mitchell Park</p>
+          -->
+
           <p class="lineSkip"></p>
           <p><a class="white underline-magical apply-font heading" href="typeform.com" target="_blank">REGISTER</a></p>
         </div>
@@ -53,7 +58,11 @@
           <h2 class="subtitle">⚛ 💡</h2>
         </div>
 
+        <p class="purple2 descrip">Description</p>
+        <!--
         <p class="purple2 descrip">In 15 hours of continuous excitement, we'll show you how programming can be fun, thought-provoking, and powerful. With various workshops, speakers, and fun activities throughout the day, TEC provides a welcoming environment perfect for first-time coders and first-time hackathon attendees, along with those with more experience.</p>
+        -->
+
         <div class="img-line">
           <img class="img-line-img"src="images/web-spec/chip.png">
           <img class="img-line-img"src="images/web-spec/binary.png">
@@ -77,6 +86,7 @@
               <h2 class="subtitle">🤔❓</h2>
             </div>
 
+            <!--
   					<div class="questions row halfed">
   						<details>
   							<summary><h3>Who can attend?</h3></summary>
@@ -139,6 +149,7 @@
               <div class="answer ansq">
                 <p class="ansq">We’re here for you! Send us an email at <a class="underline-magical purple1 soc-med-link" target="_blank" href="mailto:teensexploringcode@gmail.com">teensexploringcode@gmail.com</a> or feel free to reach out to us on <a class="underline-magical purple1 soc-med-link" target="_blank" href="http://instaram.com/Teens.Exploring.Code">Instagram</a> or <a class="underline-magical purple1 soc-med-link"  target="_blank" href="https://www.facebook.com/teensexploringcode/">Facebook</a>.</p>
 							</div>
+            -->
 
   					</div>
   				</div>
