--- a/index.html
+++ b/index.html
@@ -52,13 +52,12 @@
           </div>
           <h2 class="subtitle">⚛ 💡</h2>
         </div>
-				<!--
-        <p class="purple2 descrip">In 15 hours of continuous excitement, we'll show you how programming can be fun, thought-provoking, and powerful. With various workshops, speakers, and fun activities throughout the day, TEC provides a welcoming environment perfect for first-time coders and first-time hackathon attendees, along with those with more experience.</p>
+        <p class="purple2 descrip"> In our student-run workshop series, we'll show you how programming can be fun, thought-provoking, and powerful. With various workshops, speakers, and fun activities throughout the series, TEC provides a welcoming environment perfect for first-time coders and first-time hackathon attendees.</p>
+				<p class="purple2 descrip"> At the end of the series, students will have the opportunity to make their own final project to tackle a real life problem, guided by our mentors.</p>
         <div class="img-line">
           <img class="img-line-img"src="images/web-spec/chip.png">
           <img class="img-line-img"src="images/web-spec/binary.png">
         </div>
-			-->
         <br/>
       </div>
     </div>
@@ -77,48 +76,39 @@
               </div>
               <h2 class="subtitle">🤔❓</h2>
             </div>
-						<!--
   					<div class="questions row halfed">
   						<details>
   							<summary><h3>Who can attend?</h3></summary>
   							<div class="answer">
-  								<p>Participants ages 13-19 who have agreed to the MLH Code of Conduct are welcome to attend! If you are out of this age range and wish to attend, please contact us.</p>
+  								<p>Participants ages 12 and up who have agreed to our Code of Conduct are welcome to attend! If you are out of this age range and wish to attend, please contact us.</p>
   							</div>
   						</details>
 
   						<details>
-  							<summary><h3>What’s the format of the event?</h3></summary>
+  							<summary><h3>What’s the format of the workshop series?</h3></summary>
   							<div class="answer">
-  								<p>You’ll join a team and work on an original project together throughout the whole day and present it at the end. We'll have fun and exciting workshops throughout the day, as indicated by the schedule.</p>
+  								<p>We will have 5 different weekend workshops, which are designed to be followed in order, starting from simple syntax to UI, ending with a final project that addresses a real life problem on the last weekend. For more information, please refer to our schedule below.</p>
   							</div>
   						</details>
 
   						<details>
   							<summary><h3>How much does this cost?</h3></summary>
   							<div class="answer">
-  								<p>Nothing! TEC is free of charge, but we greatly appreciate any donations that would go towards supporting the event.</p>
+  								<p>Nothing! TEC is free of charge, thanks to our generous sponsors.</p>
   							</div>
   						</details>
 
   						<details>
   							<summary><h3>What do I need to bring?</h3></summary>
   							<div class="answer">
-  								<p>Bring your laptop and your student ID or any official ID. Lunch, dinner, and refreshments are provided, but you are welcome to bring your own snacks or food as well. Bring hardware if you plan on incorporating it into your project (contact us if you’d like to rent any).</p>
-  							</div>
-  						</details>
-
-  						<details>
-  							<summary><h3>What can I make?</h3></summary>
-  							<div class="answer">
-  								<p>Anything you can! Web, mobile, hardware, or anything else you’re interested in.</p>
-                  <h4>🖥️ 📱 🔨</h4>
+  								<p>Just bring your laptop!</p>
   							</div>
   						</details>
 
   						<details>
   							<summary><h3>How do teams work?</h3></summary>
   							<div class="answer">
-  								<p>Teams can be from a minimum of 2 people to a maximum of 4 people.</p>
+  								<p>For the final project, students will use their skills and work with each other, with teams up to 4 people, on tackling a given problem.</p>
   							</div>
   						</details>
 
@@ -132,7 +122,7 @@
   						<details>
   							<summary><h3>Are there prizes?</h3></summary>
   							<div class="answer">
-  								<p>Yes! More info on prizes will be released closer to the event date. Stay tuned!</p>
+  								<p>Yes! More info on prizes will be released closer to the final project date. Stay tuned!</p>
   							</div>
   						</details>
 
@@ -155,7 +145,7 @@
             <div>
               <div class="full-title">
                 <div class="header__underlineWrapper">
-                    <h2 class="title purple1">Event Schedule.</h2>
+                    <h2 class="title purple1">Workshop Schedule.</h2>
                     <div class="header__underline">
                     </div>
                 </div>
