add faq about hack'shop

--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
         <div class="full-width hero-text">
           <p class="white presents-font center heading" id="" data-text="tecHacks">Teens Exploring Code presents</p>
           <p class="white event-font center heading">tec<b>HACKS IV</b></p>
+					<p class="white info-font center heading">a python hack'shop series</p>
+					<!--
           <p class="white info-font center heading">TBD @ <a class="white underline-magical location-map" href="https://www.google.com/maps/place/Mitchell+Park+Community+Center/@37.4222836,-122.1149618,17z/data=!3m1!4b1!4m5!3m4!1s0x808fba6961695425:0xa8028fe7f16d5437!8m2!3d37.4222836!4d-122.1127678" target="_blank"</a>TBD</p>
-          <p class="lineSkip"></p>
+					-->
+					<p class="lineSkip"></p>
           <p><a class="white underline-magical apply-font heading" href="typeform.com" target="_blank">REGISTER</a></p>
         </div>
       </div>
@@ -77,6 +80,13 @@
               <h2 class="subtitle">🤔❓</h2>
             </div>
   					<div class="questions row halfed">
+							<details>
+  							<summary><h3>What exactly is a hack'shop?</h3></summary>
+  							<div class="answer">
+  								<p>A hack'shop couples the educational experience of a workshop with the crative problem-solving nature of a hakathon, meaning each workshop will be split between lectures and application-making.</p>
+  							</div>
+  						</details>
+
   						<details>
   							<summary><h3>Who can attend?</h3></summary>
   							<div class="answer">
@@ -130,7 +140,6 @@
               <div class="answer ansq">
                 <p class="ansq">We’re here for you! Send us an email at <a class="underline-magical purple1 soc-med-link" target="_blank" href="mailto:teensexploringcode@gmail.com">teensexploringcode@gmail.com</a> or feel free to reach out to us on <a class="underline-magical purple1 soc-med-link" target="_blank" href="http://instaram.com/Teens.Exploring.Code">Instagram</a> or <a class="underline-magical purple1 soc-med-link"  target="_blank" href="https://www.facebook.com/teensexploringcode/">Facebook</a>.</p>
 							</div>
-						-->
   					</div>
   				</div>
   			</div>
@@ -151,7 +160,6 @@
                 </div>
                 <h2 class="subtitle">⌛ 🕞</h2>
               </div>
-
 
               <table class="descrip">
                 <tr><th>Time</th><th>Event</th></tr>
