--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </div>
           <h2 class="subtitle">⚛ 💡</h2>
         </div>
-        <p class="purple2 descrip"> In our student-run workshop series, we'll show you how programming can be fun, thought-provoking, and powerful. With various workshops, speakers, and fun activities throughout the series, TEC provides a welcoming environment perfect for first-time coders and first-time hackathon attendees.</p>
+        <p class="purple2 descrip"> In our 5-part student-run workshop series, we'll show you how programming can be fun, thought-provoking, and powerful. With various workshops, speakers, and fun activities throughout the series, TEC provides a welcoming environment perfect for first-time coders and first-time hackathon attendees.</p>
 				<p class="purple2 descrip"> At the end of the series, students will have the opportunity to make their own final project to tackle a real life problem, guided by our mentors.</p>
         <div class="img-line">
           <img class="img-line-img"src="images/web-spec/chip.png">
@@ -83,7 +83,7 @@
 							<details>
   							<summary><h3>What exactly is a hack'shop?</h3></summary>
   							<div class="answer">
-  								<p>A hack'shop couples the educational experience of a workshop with the crative problem-solving nature of a hakathon, meaning each workshop will be split between lectures and application-making.</p>
+  								<p>A hack’shop couples the educational experience of a workshop with the creative problem-solving nature of a hackathon; each workshop includes a short lecture and a project to apply new skills.</p>
   							</div>
   						</details>
 
@@ -160,27 +160,14 @@
                 </div>
                 <h2 class="subtitle">⌛ 🕞</h2>
               </div>
-
+							<h4 class="spons-subtitle">Workshops will be held every Saturday from 1:30-4:30pm between February 24th and March 24th, 2019.</a></h4>
               <table class="descrip">
-                <tr><th>Time</th><th>Event</th></tr>
-                <tr><td>To</td><td>Be Determined</td></tr>
-                <!--
-                  <tr><td>7:30 AM</td><td>Check In</td></tr>
-                  <tr><td>8 AM</td><td>Opening Ceremony</td></tr>
-                  <tr><td>8:15 AM</td><td>Team Formation</td></tr>
-                  <tr><td>9 AM</td><td>TEC: Python (Programming Basics)</td></tr>
-                  <tr><td>11 AM</td><td>TEC: Java (Programming Basics)</td></tr>
-                  <tr><td>12 PM</td><td>Lunch: Asian Box 🍱</td></tr>
-                  <tr><td>1 PM</td><td>TEC: Git Workflow and Team Collaboration</td></tr>
-                  <tr><td>2 PM</td><td>How to Suceed In the Workplace: UI/UX designer @ Facebook, Katherine Liu</td></tr>
-                  <tr><td>3 PM</td><td>TEC: Build Your First Website</td></tr>
-                  <tr><td>4 PM</td><td>Leangap Entrepreneurship Workshop</td></tr>
-                  <tr><td>5 PM</td><td>Leangap VR Workshop</td></tr>
-                  <tr><td>6:30 PM</td><td>Dinner: Blue Line Pizza 🍕</td></tr>
-                  <tr><td>9 PM</td><td>Code Freeze</td></tr>
-                  <tr><td>9:30 PM</td><td>Present Projects</td></tr>
-                  <tr><td>11:15 PM</td><td>Closing Ceremony/Raffle</td></tr>
-                  -->
+                <tr><th>Day</th><th>Content</th></tr>
+                <tr><td>Feb. 24</td><td>Intro to Python - print statements, variables, operations, input, conditionals</td></tr>
+								<tr><td>Mar. 3</td><td>Intermediate Python - for, while loops, lists, string processing, dictionaries, functions</td></tr>
+								<tr><td>Mar. 10</td><td>Advanced Python - UI, turtle</td></tr>
+								<tr><td>Mar. 17</td><td>Final Project Revealed</td></tr>
+								<tr><td>Mar. 24</td><td>Final Project Presentations</td></tr>
               </table>
             </div>
         </section>
