workshop schedule description

--- a/index.html
+++ b/index.html
@@ -160,7 +160,9 @@
                 </div>
                 <h2 class="subtitle">⌛ 🕞</h2>
               </div>
-							<h4 class="spons-subtitle">Workshops will be held every Saturday from 1:30-4:30pm between February 24th and March 24th, 2019.</a></h4>
+							<div class="answer ansq">
+                <p class="ansq">Workshops will be held every Saturday from 1:30-4:30pm between February 24th and March 24th, 2019.</p>
+							</div>
               <table class="descrip">
                 <tr><th>Day</th><th>Content</th></tr>
                 <tr><td>Feb. 24</td><td>Intro to Python - print statements, variables, operations, input, conditionals</td></tr>
